--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
 body{
     text-align: center;
+    background-color: burlywood;
+    
 }
 img{
     margin: 0 auto;
+    max-width: 400px;
+}
+p{
+    font-size: 20px;
+}
+a{
+    text-decoration: none;
+    color:brown;
 }
